manifests/admin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-admin
  labels:
    app.kubernetes.io/name: business-admin
    app.kubernetes.io/part-of: business
    app.kubernetes.io/component: admin
    app.kubernetes.io/version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: business-admin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: business-admin
        app.kubernetes.io/part-of: business
        app.kubernetes.io/component: admin
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
        - name: business-admin
          image: directus/directus:9.0.0-rc.91
          ports:
            - containerPort: 8055
---
kind: Service
apiVersion: v1
metadata:
  name: business-admin
  labels:
    app.kubernetes.io/name: business-admin
    app.kubernetes.io/part-of: business
    app.kubernetes.io/component: admin
    app.kubernetes.io/version: 1.0.0
spec:
  selector:
    app.kubernetes.io/name: business-admin
  ports:
    - name: http
      port: 80
      targetPort: 8055
      protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: business-admin
  labels:
    app.kubernetes.io/name: business-admin
    app.kubernetes.io/part-of: business
    app.kubernetes.io/component: admin
    app.kubernetes.io/version: 1.0.0
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.getbud.co`) && PathPrefix(`/business/admin`)
      kind: Rule
      services:
        - name: business-admin
          port: 80
  tls:
    certResolver: letsencrypt
    options: {}
