manifests/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: business
  labels:
    app.kubernetes.io/name: business
    app.kubernetes.io/part-of: application-layer
    app.kubernetes.io/component: ingress-route
    app.kubernetes.io/version: 1.0.0
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.getbud.co`) && PathPrefix(`/business`)
      kind: Rule
      services:
        - name: business-stable
          port: 80
    - match: Host(`api.canary.getbud.co`) && PathPrefix(`/business`)
      kind: Rule
      services:
        - name: business-canary
          port: 80
  tls:
    certResolver: letsencrypt
    options:
      name: tls-options
